--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/icons/
     - assets/audio/
     - assets/map_style_black.json
     - assets/dark.json
