--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   animated_text_kit: ^4.2.2
   flutter_map: ^7.0.2
   carousel_slider: ^5.0.0
+  intl_phone_field: ^3.2.0
+  flutter_otp_text_field:
+  pin_code_fields: ^8.0.1
 
   latlong2: any
 dev_dependencies:
