--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,8 @@ dependencies:
   carousel_slider: ^5.0.0
   intl_phone_field: ^3.2.0
   flutter_otp_text_field:
-  pin_code_fields: ^8.0.1
+  pin_code_fields: 8.0.1
+
 
   latlong2: any
 dev_dependencies:
