--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   flutter_otp_text_field:
   pin_code_fields: 8.0.1
+  geocoding: ^3.0.0
 
 
   latlong2: any
