--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   flutter_otp_text_field:
   pin_code_fields: 8.0.1
   geocoding: ^3.0.0
+  table_calendar: ^3.0.9
 
 
   latlong2: any
